# refresher

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  README.rst  mypy.ini  pyproject.toml  refresher  tox.ini
.github/workflows/: ci.yml
lib/stubs/watchdog/: events.pyi  observers.pyi
src/refresher/: cli.py  conftest.py  server.py  trio_watchdog.py  utils.py  watcher.py
src/refresher/tests/: test_cli.py  test_server.py
